add dockerfile and pt vosk model for testing audio transcription

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-SpeechRecognition==3.10.0
-deep-translator==1.11.4
+# Updated requirements for Task 2
 sounddevice==0.4.6
 numpy>=1.21.0
+vosk==0.3.45
+deep-translator==1.11.4
